--- a/Week_10_Worksheet.ipynb
+++ b/Week_10_Worksheet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week 10 Worksheet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMD6ltaZZaQIgC5St7g5Ee4",
+      "authorship_tag": "ABX9TyOkPm8B+HDDECyPFKQkscjx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -464,7 +464,21 @@
         "id": "ChhFom_TnCfj"
       },
       "source": [
-        ""
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**OTHER FILES** \n",
+        "\n",
+        "In this worksheet, all of the examples use Shakespeare's sonnets, which is an excellent collection of love poetry. However, there are a ton of text files out there on the Internet for you to explore. A great source of text files is Project Guttenberg: https://www.gutenberg.org/\n",
+        "\n",
+        "Project Guttenberg has a huge number of text files for classic literature that is now in the public domain. (That is, older literature for which the copyright has expired.)\n",
+        "\n",
+        "Elsewhere on the Internet, you can find text files containing even stranger things. For example, the scripts for every episode of the show Friends. In our podcast episode this week, we talk to New College Alum Jennifer Ha who, for her thesis project, had a Python program analyze all of the scripts of Friends and attempt to generate new episode scripts in the style of Friends."
       ]
     }
   ]
