--- a/python_final.ipynb
+++ b/python_final.ipynb
@@ -40,19 +40,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DAIOLlIls-FQ",
-        "outputId": "852b91c7-2ee5-4a43-fb82-31afd5e79141"
+        "outputId": "d7441ad5-98a7-423a-d8ea-60c7d47fe17c"
       },
       "source": [
         "!pip install -q praw\n",
         "import praw"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\u001b[K     |████████████████████████████████| 153kB 10.0MB/s \n",
-            "\u001b[K     |████████████████████████████████| 204kB 13.1MB/s \n",
+            "\u001b[K     |████████████████████████████████| 153kB 5.3MB/s \n",
+            "\u001b[K     |████████████████████████████████| 204kB 7.0MB/s \n",
             "\u001b[?25h"
           ],
           "name": "stdout"
@@ -75,7 +75,7 @@
         "cat_sub = reddit.subreddit(\"catswithjobs\")\n",
         "turtle_sub = reddit.subreddit(\"turtleswithjobs\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pxVREnIAsnqg",
-        "outputId": "ef0282b9-4192-477b-f174-c35da57f00ec"
+        "outputId": "68702eec-9350-49d5-8967-92e6244f7d31"
       },
       "source": [
         "highest = 0\n",
@@ -101,16 +101,16 @@
         "print(highest_post.url)  # Output: the submission's URL\n",
         "print(highest_post.comments)  # Output: the submission's comments"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Surprise visit from the health inspector\n",
-            "9799\n",
+            "9804\n",
             "kacr1p\n",
             "https://i.redd.it/xf66b5hz1c461.jpg\n",
-            "<praw.models.comment_forest.CommentForest object at 0x7f2c76d7b588>\n"
+            "<praw.models.comment_forest.CommentForest object at 0x7faf44b8a780>\n"
           ],
           "name": "stdout"
         }
@@ -119,11 +119,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AIDYOa5WFEu0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "61b6b675-0f66-4213-850e-a4559e6881b3"
+        "id": "AIDYOa5WFEu0"
       },
       "source": [
         "def check_comments(sub):\r\n",
@@ -157,7 +153,6 @@
         "      tracker[word] = 1\r\n",
         "  return tracker\r\n",
         "\r\n",
-        "print(make_data(good_words))\r\n",
         "\r\n",
         "cat_comments = check_comments(cat_sub)\r\n",
         "turt_comments = check_comments(turtle_sub)\r\n",
@@ -168,16 +163,8 @@
         "cat_data = make_data(cat_clean)\r\n",
         "turt_data = make_data(turt_clean)"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "{'cute': 1, 'love': 1, 'like': 1, 'boi': 1, 'chonky': 1, 'happy': 1, 'lol': 1, 'lmao': 1, 'hehe': 1, 'haha': 1, 'ha': 1, 'hahaha': 1}\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -223,7 +210,7 @@
         "good_turt_table = dict_to_list(good_turt)\r\n",
         "bad_turt_table = dict_to_list(bad_turt)\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -234,7 +221,7 @@
           "height": 542
         },
         "id": "iS1XI9floiJQ",
-        "outputId": "09b732d3-0f5f-4b51-9c09-67b8e9ff050b"
+        "outputId": "a9d854f6-8cd0-4f15-a76e-f0998e795e92"
       },
       "source": [
         "import plotly.graph_objects as go\r\n",
@@ -268,7 +255,7 @@
         "])\r\n",
         "fig.show()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -281,20 +268,20 @@
               "            <script src=\"https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_SVG\"></script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script>\n",
               "                <script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>\n",
               "        <script src=\"https://cdn.plot.ly/plotly-latest.min.js\"></script>    \n",
-              "            <div id=\"a0e62c05-1975-403e-b873-3bbea5ec822e\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+              "            <div id=\"99ebace3-54c3-432a-899a-be919ce0e208\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
               "            <script type=\"text/javascript\">\n",
               "                \n",
               "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
               "                    \n",
-              "                if (document.getElementById(\"a0e62c05-1975-403e-b873-3bbea5ec822e\")) {\n",
+              "                if (document.getElementById(\"99ebace3-54c3-432a-899a-be919ce0e208\")) {\n",
               "                    Plotly.newPlot(\n",
-              "                        'a0e62c05-1975-403e-b873-3bbea5ec822e',\n",
-              "                        [{\"cells\": {\"align\": [\"left\", \"center\"], \"fill\": {\"color\": [\"paleturquoise\", \"white\"]}, \"font\": {\"size\": 12}, \"height\": 30, \"line\": {\"color\": \"darkslategray\"}, \"values\": [[\"Good Words\", \"Bad Words\"], [[\" cute: 5\", \" love: 4\", \" like: 10\", \" lol: 2\", \" lmao: 1\", \" haha: 1\"], [\"There are no words for this category :)\"]], [[\" cute: 1\", \" love: 1\", \" like: 2\", \" lol: 2\"], [\"There are no words for this category :)\"]]]}, \"columnorder\": [1, 2, 3], \"columnwidth\": [80, 80], \"header\": {\"align\": [\"left\", \"center\"], \"fill\": {\"color\": \"royalblue\"}, \"font\": {\"color\": \"white\", \"size\": 12}, \"height\": 40, \"line\": {\"color\": \"darkslategray\"}, \"values\": [[\"<b>GOOD AND BAD COMMENTS</b><br>on top reddit posts\"], [\"<b>CATSWITHJOBS</b>\"], [\"<b>TURTLESWITHJOBS</b>\"]]}, \"type\": \"table\"}],\n",
+              "                        '99ebace3-54c3-432a-899a-be919ce0e208',\n",
+              "                        [{\"cells\": {\"align\": [\"left\", \"center\"], \"fill\": {\"color\": [\"paleturquoise\", \"white\"]}, \"font\": {\"size\": 12}, \"height\": 30, \"line\": {\"color\": \"darkslategray\"}, \"values\": [[\"Good Words\", \"Bad Words\"], [[\" cute: 5\", \" love: 4\", \" like: 11\", \" lol: 2\", \" lmao: 1\", \" haha: 1\"], [\"There are no words for this category :)\"]], [[\" cute: 1\", \" love: 1\", \" like: 2\", \" happy: 1\", \" lol: 2\"], [\"There are no words for this category :)\"]]]}, \"columnorder\": [1, 2, 3], \"columnwidth\": [80, 80], \"header\": {\"align\": [\"left\", \"center\"], \"fill\": {\"color\": \"royalblue\"}, \"font\": {\"color\": \"white\", \"size\": 12}, \"height\": 40, \"line\": {\"color\": \"darkslategray\"}, \"values\": [[\"<b>GOOD AND BAD COMMENTS</b><br>on top reddit posts\"], [\"<b>CATSWITHJOBS</b>\"], [\"<b>TURTLESWITHJOBS</b>\"]]}, \"type\": \"table\"}],\n",
               "                        {\"template\": {\"data\": {\"bar\": [{\"error_x\": {\"color\": \"#2a3f5f\"}, \"error_y\": {\"color\": \"#2a3f5f\"}, \"marker\": {\"line\": {\"color\": \"#E5ECF6\", \"width\": 0.5}}, \"type\": \"bar\"}], \"barpolar\": [{\"marker\": {\"line\": {\"color\": \"#E5ECF6\", \"width\": 0.5}}, \"type\": \"barpolar\"}], \"carpet\": [{\"aaxis\": {\"endlinecolor\": \"#2a3f5f\", \"gridcolor\": \"white\", \"linecolor\": \"white\", \"minorgridcolor\": \"white\", \"startlinecolor\": \"#2a3f5f\"}, \"baxis\": {\"endlinecolor\": \"#2a3f5f\", \"gridcolor\": \"white\", \"linecolor\": \"white\", \"minorgridcolor\": \"white\", \"startlinecolor\": \"#2a3f5f\"}, \"type\": \"carpet\"}], \"choropleth\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"choropleth\"}], \"contour\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"contour\"}], \"contourcarpet\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"contourcarpet\"}], \"heatmap\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"heatmap\"}], \"heatmapgl\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"heatmapgl\"}], \"histogram\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"histogram\"}], \"histogram2d\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"histogram2d\"}], \"histogram2dcontour\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"histogram2dcontour\"}], \"mesh3d\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"type\": \"mesh3d\"}], \"parcoords\": [{\"line\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"parcoords\"}], \"pie\": [{\"automargin\": true, \"type\": \"pie\"}], \"scatter\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatter\"}], \"scatter3d\": [{\"line\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatter3d\"}], \"scattercarpet\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattercarpet\"}], \"scattergeo\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattergeo\"}], \"scattergl\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattergl\"}], \"scattermapbox\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scattermapbox\"}], \"scatterpolar\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterpolar\"}], \"scatterpolargl\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterpolargl\"}], \"scatterternary\": [{\"marker\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"type\": \"scatterternary\"}], \"surface\": [{\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}, \"colorscale\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"type\": \"surface\"}], \"table\": [{\"cells\": {\"fill\": {\"color\": \"#EBF0F8\"}, \"line\": {\"color\": \"white\"}}, \"header\": {\"fill\": {\"color\": \"#C8D4E3\"}, \"line\": {\"color\": \"white\"}}, \"type\": \"table\"}]}, \"layout\": {\"annotationdefaults\": {\"arrowcolor\": \"#2a3f5f\", \"arrowhead\": 0, \"arrowwidth\": 1}, \"coloraxis\": {\"colorbar\": {\"outlinewidth\": 0, \"ticks\": \"\"}}, \"colorscale\": {\"diverging\": [[0, \"#8e0152\"], [0.1, \"#c51b7d\"], [0.2, \"#de77ae\"], [0.3, \"#f1b6da\"], [0.4, \"#fde0ef\"], [0.5, \"#f7f7f7\"], [0.6, \"#e6f5d0\"], [0.7, \"#b8e186\"], [0.8, \"#7fbc41\"], [0.9, \"#4d9221\"], [1, \"#276419\"]], \"sequential\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]], \"sequentialminus\": [[0.0, \"#0d0887\"], [0.1111111111111111, \"#46039f\"], [0.2222222222222222, \"#7201a8\"], [0.3333333333333333, \"#9c179e\"], [0.4444444444444444, \"#bd3786\"], [0.5555555555555556, \"#d8576b\"], [0.6666666666666666, \"#ed7953\"], [0.7777777777777778, \"#fb9f3a\"], [0.8888888888888888, \"#fdca26\"], [1.0, \"#f0f921\"]]}, \"colorway\": [\"#636efa\", \"#EF553B\", \"#00cc96\", \"#ab63fa\", \"#FFA15A\", \"#19d3f3\", \"#FF6692\", \"#B6E880\", \"#FF97FF\", \"#FECB52\"], \"font\": {\"color\": \"#2a3f5f\"}, \"geo\": {\"bgcolor\": \"white\", \"lakecolor\": \"white\", \"landcolor\": \"#E5ECF6\", \"showlakes\": true, \"showland\": true, \"subunitcolor\": \"white\"}, \"hoverlabel\": {\"align\": \"left\"}, \"hovermode\": \"closest\", \"mapbox\": {\"style\": \"light\"}, \"paper_bgcolor\": \"white\", \"plot_bgcolor\": \"#E5ECF6\", \"polar\": {\"angularaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"bgcolor\": \"#E5ECF6\", \"radialaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}}, \"scene\": {\"xaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}, \"yaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}, \"zaxis\": {\"backgroundcolor\": \"#E5ECF6\", \"gridcolor\": \"white\", \"gridwidth\": 2, \"linecolor\": \"white\", \"showbackground\": true, \"ticks\": \"\", \"zerolinecolor\": \"white\"}}, \"shapedefaults\": {\"line\": {\"color\": \"#2a3f5f\"}}, \"ternary\": {\"aaxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"baxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}, \"bgcolor\": \"#E5ECF6\", \"caxis\": {\"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\"}}, \"title\": {\"x\": 0.05}, \"xaxis\": {\"automargin\": true, \"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\", \"title\": {\"standoff\": 15}, \"zerolinecolor\": \"white\", \"zerolinewidth\": 2}, \"yaxis\": {\"automargin\": true, \"gridcolor\": \"white\", \"linecolor\": \"white\", \"ticks\": \"\", \"title\": {\"standoff\": 15}, \"zerolinecolor\": \"white\", \"zerolinewidth\": 2}}}},\n",
               "                        {\"responsive\": true}\n",
               "                    ).then(function(){\n",
               "                            \n",
-              "var gd = document.getElementById('a0e62c05-1975-403e-b873-3bbea5ec822e');\n",
+              "var gd = document.getElementById('99ebace3-54c3-432a-899a-be919ce0e208');\n",
               "var x = new MutationObserver(function (mutations, observer) {{\n",
               "        var display = window.getComputedStyle(gd).display;\n",
               "        if (!display || display === 'none') {{\n",
